--- a/react-app/src/components/SingleGroupPage/SingleGroupPage.css
+++ b/react-app/src/components/SingleGroupPage/SingleGroupPage.css
@@ -62,7 +62,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
     width: 100vw;
 }
 
